# chess-vector-engine

./: .gitattributes  .gitignore  API_REFERENCE.md  CANDLE_NN_OBSTACLE_ANALYSIS.md  CLAUDE.md  CNAME  Cargo.toml  HYBRID_SETUP_GUIDE.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  LICENSE_ENFORCEMENT.md  LICHESS_LOADER_README.md  NNUE_TRAINING_GUIDE.md  PLAY_STOCKFISH_README.md  README.md  chess_engine.db  chess_vector_engine.db  chess_vector_vs_external_engine_20250709_144326.pgn  chess_vector_vs_external_engine_20250709_151319.pgn  chess_vector_vs_external_engine_20250709_160555.pgn  chess_vector_vs_external_engine_20250709_160657.pgn  chess_vector_vs_external_engine_20250709_191602.pgn  chess_vector_vs_external_engine_20250710_015005.pgn  chess_vector_vs_external_engine_20250710_143914.pgn  chess_vector_vs_external_engine_20250710_152458.pgn  chess_vector_vs_external_engine_20250710_152748.pgn  chess_vector_vs_external_engine_20250710_200801.pgn  chess_vector_vs_external_engine_20250711_215227.pgn  chess_vector_vs_external_engine_20250712_171947.pgn  chess_vector_vs_external_engine_20250712_174442.pgn  chess_vector_vs_external_engine_20250712_175545.pgn  chess_vector_vs_external_engine_20250713_023255.pgn  chess_vector_vs_external_engine_20250715_024547.pgn  crates.js  help.html  hybrid_production_nnue.config  hybrid_production_nnue.weights  hybrid_production_nnue_epoch_10.weights  hybrid_production_nnue_epoch_10_v2.weights  (+18 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  REPOSITORY_POLICIES.md  SECURITY.md  SECURITY_POLICIES.md  pull_request_template.md
analyze/: all.html  fn.analyze_material.html  fn.analyze_position.html  fn.analyze_positional_features.html  fn.count_developed_pieces.html  fn.initialize_analysis_engine.html  fn.load_opening_book.html  fn.main.html  index.html  sidebar-items.js
analyze_full/: all.html  fn.analyze_material.html  fn.analyze_position.html  fn.analyze_positional_features.html  fn.count_developed_pieces.html  fn.initialize_analysis_engine.html  fn.load_opening_book.html  fn.main.html  index.html  sidebar-items.js  struct.GameState.html  struct.MoveAnalysis.html
benches/: comprehensive_performance_benchmark.rs  core_evaluation_benchmark.rs  position_encoding_benchmark.rs  similarity_search_benchmark.rs  similarity_search_cache_benchmark.rs
benchmark/: all.html  fn.generate_random_position.html  fn.main.html  fn.test_similarity_accuracy.html  index.html  sidebar-items.js
chess_vector_engine/: all.html  index.html  macro.add_context!.html  macro.add_context.html  macro.config_error!.html  macro.config_error.html  macro.if_feature!.html  macro.if_feature.html  macro.if_feature_else!.html  macro.if_feature_else.html  macro.invalid_position!.html  macro.invalid_position.html  macro.memory_limit_exceeded!.html  macro.memory_limit_exceeded.html  macro.profile_scope.html  macro.require_feature!.html  macro.require_feature.html  macro.resource_exhausted!.html  macro.resource_exhausted.html  macro.search_error!.html  macro.search_error.html  macro.training_error.html  macro.validation_error.html  macro.vector_error!.html  macro.vector_error.html  sidebar-items.js  struct.ChessVectorEngine.html  struct.HybridConfig.html  struct.MaterialBalance.html  struct.MoveRecommendation.html  struct.TrainingStats.html
creator_premium_demo/: all.html  fn.main.html  index.html
debug_panic/: all.html  fn.main.html  index.html
demo/: all.html  fn.main.html  index.html
examples/: advanced_usage.rs  basic_usage.rs  object_pool_usage.rs  uci_integration.rs
extract_strategic_motifs/: all.html  fn.main.html  index.html
feature_demo/: all.html  fn.find_test_file.html  fn.main.html  index.html  sidebar-items.js
license_demo/: all.html  fn.main.html  index.html  sidebar-items.js
load_lichess_puzzles/: all.html  fn._create_progress_bar.html  fn._get_csv_line_count.html  fn.download_lichess_puzzles.html  fn.main.html  index.html  sidebar-items.js  struct.Args.html
play_stockfish/: all.html  fn.calculate_centipawn_losses.html  fn.convert_to_san.html  fn.main.html  fn.normalize_evaluation.html  fn.play_game.html  fn.train_basic_nnue.html  index.html  sidebar-items.js  struct.GameState.html  struct.MoveAnalysis.html  struct.StockfishPlayer.html
play_stockfish_safe/: all.html  fn.calculate_centipawn_losses.html  fn.convert_to_san.html  fn.main.html  fn.normalize_evaluation.html  fn.play_game.html  index.html  sidebar-items.js  struct.GameState.html  struct.MoveAnalysis.html  struct.StockfishPlayer.html
self_learning/: all.html  fn.load_pgn_games.html  fn.main.html  fn.print_usage.html  fn.run_continuous_learning.html  fn.run_fast_training.html  fn.run_training.html  fn.show_progress.html  index.html  sidebar-items.js
simplified_demo/: all.html  fn.load_strategic_knowledge.html  fn.main.html  index.html  sidebar-items.js
src/: ann.rs  auto_discovery.rs  core_evaluation.rs  errors.rs  evaluation_calibration.rs  features.rs  gpu_acceleration.rs  hybrid_evaluation.rs  lib.rs  license.rs  lichess_loader.rs  lsh.rs  manifold_learner.rs  motif_extractor.rs  nnue.rs  opening_book.rs  pattern_recognition.rs  persistence.rs  position_encoder.rs  similarity_search.rs  stockfish_testing.rs  strategic_evaluator.rs  strategic_evaluator_lazy.rs  strategic_initiative.rs  strategic_motifs.rs  streaming_loader.rs  tablebase.rs  tactical_search.rs  training.rs  uci.rs  ultra_fast_loader.rs  variational_autoencoder.rs
tests/: calibrated_tactical_validation.rs  controlled_stockfish_validation.rs  engine_validation_suite.rs  tactical_validation_suite.rs
train_nnue/: all.html  fn.evaluate_position_heuristic.html  fn.generate_game_positions.html  fn.generate_training_positions.html  fn.main.html  fn.test_existing_model.html  fn.test_integration.html  fn.test_nnue_model.html  fn.train_nnue_comprehensive.html  index.html  sidebar-items.js
training_data/: README.md  starter_dataset.json
uci_engine/: all.html  fn.main.html  index.html
validate_hypothesis/: all.html  fn.analyze_strategic_initiative.html  fn.evaluate_purely_tactical.html  fn.evaluate_with_our_approach.html  index.html  (+4 more)
(+518 files in other folders)
